[package]
name = "valve-server-query"
version = "0.4.5"
edition = "2021"
authors = ["Kyle L. Davis <aceofspades5757.github@gmail.com>"]
description = "This package allows you to access the data provided by Valve's Server Query protocol."

readme = "README.md"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/AceofSpades5757/valve-server-query"
repository = "https://github.com/AceofSpades5757/valve-server-query"

[dependencies]
log = "0.4.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "2.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2.0", features = ["color"] }
